bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:3: error: ')' expected but ';' found.
    if(a>=0; && b<0; ) {retur true}
           ^PosNeg:3: error: ';' expected but integer literal found.
    if(a>=0; && b<0; ) {retur true}
                  ^PosNeg:3: error: illegal start of statement
    if(a>=0; && b<0; ) {retur true}
                     ^